--- a/.github/workflows/github-cicd-pipeline.yaml
+++ b/.github/workflows/github-cicd-pipeline.yaml
@@ -61,7 +61,7 @@ jobs:
           path: ${{ github.workspace }}/build/ExportedArmTemplate
 
   Dev-release:
-    if: ${{ inputs.deploy_env == Dev || inputs.deploy_env == 'All' }}
+    if: ${{ inputs.deploy_env == 'Dev' || inputs.deploy_env == 'All' }}
     runs-on: ubuntu-latest
     needs: build
     environment: dev
@@ -85,8 +85,8 @@ jobs:
         with:
           resourceGroupName: rg-app-fss-tmp-dev-scus-001
           dataFactoryName: ch-test
-          armTemplateFile: ARMTemplateForFactory.json
-          armTemplateParametersFile: ARMTemplateParametersForFactory.json
+          armTemplateFile: ExportedArmTemplate/ARMTemplateForFactory.json
+          armTemplateParametersFile: ExportedArmTemplate/ARMTemplateParametersForFactory.json
           
   Prod-release:
     if: ${{ inputs.deploy_env == 'Prod' || inputs.deploy_env == 'All' }}
@@ -113,5 +113,5 @@ jobs:
         with:
           resourceGroupName: rg-app-fss-tmp-prod-scus-001
           dataFactoryName: adf-app-fss-tmp-prod-scus-001  
-          armTemplateFile: ARMTemplateForFactory.json
-          armTemplateParametersFile: ARMTemplateParametersForFactory.json
+          armTemplateFile: ExportedArmTemplate/ARMTemplateForFactory.json
+          armTemplateParametersFile: ExportedArmTemplate/ARMTemplateParametersForFactory.json
